# FACT_Group_19

./: .codetogether.ignore  .gitignore  .pre-commit-config.yaml  OUR_README.md  README.md  attack.py  common.py  eval.py  goals.py  main.py  print_results.py  pyproject.toml  rbo_calculator.py  rbo_testing.py  requirements.txt  run.sh  search.py  search_random.py  slurm_output_4884435.out  train.py  upload_models.py  utils.py
.github/workflows/: mypy.yml  pylint.yml
jobs/: experiment_debug.job  install_requirements.job  install_requirments.job  train_all.job  train_debug.job  train_gpt.job
jobs/experiments_decisiontree/: bert_inherent_decisiontree.job  distilbert_xaifooler_decisiontree.job
jobs/experiments_energy/: bert_inherent_logistic.job  distilbert_inherent_logistic.job  distilbert_random_logistic.job  roberta_inherent_logistic.job  roberta_random_logistic.job
jobs/experiments_logistic/: bert_inherent_logistic.job  bert_random_logistic.job  bert_xaifooler_logistic.job  distilbert_inherent_logistic.job  distilbert_random_logistic.job  distilbert_xaifooler_logistic.job  gpt_inherent_logistic.job  gpt_random_logistic.job  gpt_xaifooler_logistic.job  roberta_inherent_logistic.job  roberta_random_logistic.job  roberta_xaifooler_logistic.job
jobs/experiments_logistic_symptom/: bert_inherent_logistic.job  bert_random_logistic.job  bert_xaifooler_logistic.job  distilbert_inherent_logistic.job  distilbert_random_logistic.job  distilbert_xaifooler_logistic.job  gpt_inherent_logistic.job  gpt_random_logistic.job  gpt_xaifooler_logistic.job  roberta_inherent_logistic.job  roberta_random_logistic.job  roberta_xaifooler_logistic.job
src/: constants.py  dataset.py  evaluate.py  experiment.py  main.py  main_temp.py  temp.py  train.py
src/attack/: adversarial_xai_rbo.py  attack.py  gen_attacker.py  perform_attack.py  random_baseline.py
src/attack_classes/: adv_xai_attack.py  random_baseline.py
src/attack_recipes/: __init__.py  adversarial_xai_rbo.py  attack.py  attack_recipes.py  common.py  gen_attacker.py  goals.py  initialgoal.py  random_baseline.py  search.py  search_random.py
utils/: fix.sh
(+27 files in other folders)
