[project]
name = "Reproducing XAIFooler"
version = "0.0.1"
authors = [
  {name = "Jakob Kaiser"},
  {name = "Cedrik Blommestijn"},
  {name = "Adriana Cabrera"},
  {name = "Owen de Jong,"},
]
description = "This project tries to reproduce results from the paper 'Are Your Explanations Reliable?' Investigating the Stability of LIME in Explaining Text Classifiers by Marrying XAI and Adversarial Attack"
readme = "README.md"
license = {file = "LICENSE"}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
pythonVersion = "3.8"
