[project]
name = "Reproducing XAIFooler"
version = "0.0.1"
authors = [
  {name = "Jakob Kaiser"},
  {name = "Cedrik Blommestijn"},
  {name = "Adriana Cabrera"},
  {name = "Owen de Jong,"},
]
description = """This project tries to reproduce results from the paper 'Are
Your Explanations Reliable?' Investigating the Stability of LIME in Explaining
Text Classifiers by Marrying XAI and Adversarial Attack."""
readme = "README.md"
license = {file = "LICENSE"}

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = true
pythonVersion = "3.8"

[tool.pylint]
max-line-length = 120
disable = [
    "C0415" # imports outside of top-level
]

[tool.mypy]
ignore_missing_imports = true
